--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -17,8 +17,8 @@ body {
 	
 }
 
-footer {
-  margin-top: 10px;
+#foot {
+  margin-top: 1000px;
   clear:both;
   padding: 40px;
   border-top: 6px solid #4aaaa5;
@@ -41,7 +41,33 @@ footer {
 
 	}
 
+#picturelink {
+	border: 1px solid #cccccc;
+	background-color: white;
+	color:black;
+	position: absolute;
+	height: 200px;
+	width: 250px;
+	right: 30px;
+	margin-top: 45px;
+	text-orientation: center;
+	text-align: center;
 
+}
+
+.boxHeader {
+	font-size: bold;
+	font-color: #4aaaa5;
+	text-underline-position: below;
+}
+
+header {
+    background-color: #ffffff;
+    padding: 10, 10, 0, 10;
+    border-bottom: 1px solid #cccccc;
+    display: flex;
+    font-family: "Georgia", "Times New Roman", Times, serif;
+}
 
 #page-header { 	
 	color: white;
@@ -59,72 +85,3 @@ footer {
 	text-orientation: center;
 	border-bottom-color: black;
 }
-
-.aboutMe, .portfolioContainer, .formContainer {
-    border: 1px solid #cccccc;
-    background-color: white;
-    margin-top: 20px;
-    margin-left: -200px;
-    margin-right: 45%;
-    margin-bottom: 20px;
-    padding: 40px;
-    position: fixed;
-    color: black;
-	background-color: white;
-	word-wrap:normal;
-	width: 500px;
-	padding:20px;
-	font-family: cursive;
-	font-size: 15px;
-	border: 1px solid #cccccc;
-	text-align: left;
-	position: relative;
-	left: 275px;
-	margin-top: 20px
-
-}
-
-#picturelink {
-	border: 1px solid #cccccc;
-	background-color: white;
-	color:black;
-	position: absolute;
-	height: 200px;
-	width: 250px;
-	right: 300px;
-	margin-top: -510px;
-	text-orientation: center;
-	text-align: center;
-
-}
-
-
-.boxHeader {
-	font-size: bold;
-	font-color: #4aaaa5;
-	text-underline-position: below;
-}
-
-header {
-    background-color: #ffffff;
-    padding: 10, 10, 0, 10;
-    border-bottom: 1px solid #cccccc;
-    display: flex;
-    font-family: "Georgia", "Times New Roman", Times, serif;
-
-h1 {
-	text-align: center;
-	text-orientation: center;
-}
-
-#pupper {
-	height: 200px;
-	width: 200px;
-
-}
-
-#address  {
-	margin-right: 300px;
-	margin-left: 70px;
-}
-
