--- a/contactstyle.css
+++ b/contactstyle.css
@@ -88,7 +88,7 @@ input[type=submit]:hover {
 .container {
     border: 1px solid #cccccc;
     background-color: white;
-    margin-top: 10opx;
+    margin-top: 20px;
     margin-left: 100px;
     margin-right: 45%;
     margin-bottom: 10px;
