--- a/assets/css/portfoliostyle.css
+++ b/assets/css/portfoliostyle.css
@@ -31,7 +31,7 @@ body {
 
 #menu {
 	background-color: white;
-	color: black;
+	color: #4aaaa5;
 	margin-top: 10px;
 	margin-right: 1050px;
 	width: 225px;
@@ -54,10 +54,11 @@ body {
 
 #liner {
   border-bottom: 1px solid #dddddd;
-  width: 400px;
-  margin-left: 100px;
+  width: 190px;
+  margin-left: 30px;
   margin-top: -20px;
   height: -20px;
+  padding-bottom: 10px;
 }
 
 #picturelink {
@@ -76,7 +77,7 @@ body {
 
 .boxHeader {
 	font-size: bold;
-	font-color: #4aaaa5;
+	font-color: white;
 	text-underline-position: below;
 }
 
