--- a/contactstyle.css
+++ b/contactstyle.css
@@ -59,18 +59,16 @@ header {
     font-family: "Georgia", "Times New Roman", Times, serif;
 }
 
-/* Style inputs with type="text", select elements and textareas */
+
 input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px, 12px, 10px, 12px; /* Some padding */  
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 10px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+    width: 100%; 
+    padding: 12px, 12px, 10px, 12px; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px; 
+    margin-bottom: 10px; 
+    resize: vertical 
 }
-/* Style the submit button with a specific background color etc */
 input[type=submit] {
     background-color: #4aaaa5;
     font: bold;
@@ -80,7 +78,6 @@ input[type=submit] {
     border-radius: 4px;
     cursor: pointer;
 }
-/* When moving the mouse over the submit button, add a darker green color */
 input[type=submit]:hover {
     background-color: #4aaaa5;
 }
